[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/exibit/ExibitBase001/ExibitBase001.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/exibit/ExibitPainting001/ExibitPainting001.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/exibit/Exibits/ExibitFloating.gd" type="Script" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 2.5

[sub_resource type="Animation" id=2]
resource_name = "Floating"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("ExibitPainting001:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ExibitPainting001:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 2, -0.2, -0.09, 0.2, 0.0867548, 2.25, -0.5, 0, 0.5, 0, 1.75, -0.5, 0, 0.5, 0, 2, -0.2, -0.09, 0.2, 0.09 ),
"times": PoolRealArray( 0, 1, 3, 4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ExibitPainting001:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExibitPainting001:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 2, 0 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ExibitPainting001:translation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ExibitPainting001:translation:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ExibitPainting001:translation:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ExibitPainting001:rotation_degrees:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ExibitPainting001:rotation_degrees:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("ExibitPainting001:rotation_degrees:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Exibit001" type="Spatial"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 3 )

[node name="ExibitPainting001" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="ExibitBase001" parent="." instance=ExtResource( 1 )]

[node name="LightR" type="Spatial" parent="."]
transform = Transform( -0.707107, 0.5, 0.5, -3.09086e-08, 0.707107, -0.707107, -0.707107, -0.5, -0.5, 0.523873, 0.259907, -0.741013 )
visible = false

[node name="SpotLight" type="SpotLight" parent="LightR"]
shadow_bias = 0.1

[node name="OmniLight" type="OmniLight" parent="LightR"]
transform = Transform( 1, 0, -2.38419e-07, 0, 1, 3.57628e-07, 2.38419e-07, 1.49012e-08, 1, 0, 0, 0 )
omni_range = 3.0

[node name="LightL" type="Spatial" parent="."]
transform = Transform( 0.707107, 0.5, 0.5, 0, 0.707107, -0.707107, -0.707107, 0.5, 0.5, 0.524, 0.26, 0.741 )
visible = false

[node name="SpotLight" type="SpotLight" parent="LightL"]
shadow_bias = 0.1

[node name="OmniLight" type="OmniLight" parent="LightL"]
omni_range = 3.0

[node name="Spectator" type="Area" parent="."]
collision_mask = 2
monitorable = false

[node name="Collider" type="CollisionShape" parent="Spectator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Location" type="Position3D" parent="Spectator"]
transform = Transform( -4.37114e-08, 0.173648, 0.984808, 0, 0.984808, -0.173648, -1, -7.5904e-09, -4.30473e-08, 1.8, 0, -7.86805e-08 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "Floating"
anims/Floating = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="Spectator" to="." method="_on_Spectator_body_entered"]
[connection signal="body_exited" from="Spectator" to="." method="_on_Spectator_body_exited"]
